# TDDPracticeCPP

./: .gitignore  CMakeLists.txt  DataStore.h  Player.cpp  Player.h  main.cpp  main.cxx
Tests/: PlayerTests.cpp  tests.cpp
Tests/Mocks/: MockDataStore.h
